--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==0.10.1
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 passlib==1.6.2
 SQLAlchemy==1.0.6
 Werkzeug==0.10.4
+WTForms==2.0.2
